fix: fix spacing on create identity feedback step

--- a/src/modals/new-identity-flow/common-steps/feedback-step/FeedbackStep.css
+++ b/src/modals/new-identity-flow/common-steps/feedback-step/FeedbackStep.css
@@ -23,12 +23,13 @@
     height: 100%;
     display: flex;
     flex-direction: column;
+    justify-content: flex-end;
     align-items: center;
     background-color: white;
 
     & .textContainer {
+        margin-bottom: 9rem;
         display: flex;
-        flex-grow: 1;
         flex-direction: column;
         justify-content: center;
         align-items: center;
